<resources>
    <string name="app_name">DvrApp</string>

    <!--    Common-->
    <string name="text_ok">"确认"</string>
    <string name="text_cancel">"取消"</string>
    <string name="text_wait">"请稍等..."</string>
    <string name="text_quit">"退出(%1$d)"</string>
    <string name="text_fast_click">"请勿频繁操作"</string>

    <!--    Main-->
    <string name="text_title_dvr">"DVR"</string>
    <string name="text_power_off_tips">"确定关闭DVR？"</string>
    <string name="text_closed">"行车记录仪已关闭"</string>
    <string name="text_drive_tip">"为了您的安全,请勿在行车时观看视频"</string>
    <string name="text_sdcard_exit">"SD卡已安全退出"</string>
    <string name="text_no_sdcard">"未检测到SD卡"</string>
    <string name="text_not_connected">"行车记录仪未连接"</string>
    <string name="text_open_on">摄像头开启中...</string>
    <!--    Record-->
    <string name="text_record_ordinary_video">"普通录像"</string>
    <string name="text_record_emergency_video">"紧急录像"</string>
    <string name="text_record_ordinary_shot">"拍&#12288;&#12288;照"</string>
    <string name="text_record_mic">"麦&#8194;克&#8194;风"</string>
    <string name="text_record_replay">"回&#12288;&#12288;放"</string>
    <string name="text_record_setting">"设&#12288;&#12288;置"</string>
    <string name="text_record_close">"关&#12288;&#12288;闭"</string>

    <!--    Playback-->
    <string name="text_playback_back">"返&#12288;&#12288;回"</string>
    <string name="text_playback_ordinary_video">"普通录像"</string>
    <string name="text_playback_emergency_video">"紧急录像"</string>
    <string name="text_playback_photo">"照&#12288;&#12288;片"</string>
    <string name="text_playback_at_will_photo">"随&#8194;心&#8194;拍"</string>
    <string name="text_playback_edit">"编&#12288;&#12288;辑"</string>
    <string name="text_playback_pause">"暂&#12288;&#12288;停"</string>
    <string name="text_playback_mute">"静&#12288;&#12288;音"</string>
    <string name="text_playback_at_will_video">"视&#12288;&#12288;频"</string>
    <string name="text_playback_at_will_picture">"图&#12288;&#12288;片"</string>

    <!--    Replay-->
    <string name="text_replay_back">"返&#12288;&#12288;回"</string>
    <string name="text_replay_ordinary_video">"普通录像"</string>
    <string name="text_replay_emergency_video">"紧急录像"</string>
    <string name="text_replay_photo">"照&#12288;&#12288;片"</string>
    <string name="text_replay_at_will_photo">"随&#8194;心&#8194;拍"</string>
    <string name="text_replay_edit">"编&#12288;&#12288;辑"</string>
    <string name="text_replay_pause">"暂&#12288;&#12288;停"</string>
    <string name="text_replay_mute">"静&#12288;&#12288;音"</string>
    <string name="text_replay_delete">"删除"</string>
    <string name="text_delete_current_video">"删除当前录像"</string>
    <string name="text_delete_current_photo">"删除当前图片"</string>
    <string name="text_move_current_to_normal">"移动当前录像至普通录像"</string>
    <string name="text_move_current_to_normal1">"紧急录像列表不再保存,\n请前往普通录像列表查看"</string>
    <string name="text_move_current_to_emergency">"移动当前录像至紧急录像"</string>
    <string name="text_move_current_to_emergency1">"普通录像列表不再保存,\n请前往紧急录像查看"</string>
    <string name="text_warning">"警告"</string>
    <string name="text_warning_line1">"为了您的安全，请勿在行车时观看视频"</string>
    <string name="text_warning_line2">"可在系统设置中开启“允许观看视频”"</string>
    <string name="text_replay_del_normal">"普通录像列表不再保存"</string>
    <string name="text_replay_del_emergency">"紧急录像列表不再保存"</string>
    <string name="text_replay_mov_normal">"普通录像列表不再保存,"</string>
    <string name="text_replay_mov_emergency">"紧急录像列表不再保存,"</string>
    <string name="text_replay_delete_picture1">"照片删除后不可恢复"</string>
    <string name="text_replay_delete_video">"录像删除后不可恢复"</string>
    <string name="text_replay_upload_title">上传当前文件</string>

    <!--    Edit-->
    <string name="text_edit_back">"返&#12288;&#12288;回"</string>
    <string name="text_edit_normal_video">"普通录像"</string>
    <string name="text_edit_emergency_video">"紧急录像"</string>
    <string name="text_edit_photo">"图&#12288;&#12288;片"</string>
    <string name="text_edit_edit">"编&#12288;&#12288;辑"</string>
    <string name="text_edit_prev">"上一页"</string>
    <string name="text_edit_next">"下一页"</string>
    <string name="text_edit_select">"全&#12288;&#12288;选"</string>
    <string name="text_edit_cancel_select">"取消全选"</string>
    <string name="text_edit_delete">"删除"</string>
    <string name="text_edit_delete1">"删&#12288;&#12288;除"</string>
    <string name="text_edit_move">"移动"</string>
    <string name="text_edit_move1">"移&#12288;&#12288;动"</string>
    <string name="text_edit_upload">"上&#12288;&#12288;传"</string>
    <string name="text_edit_delete_tips">"删除选中录像"</string>
    <string name="text_edit_delete_picture">"删除选中图片"</string>
    <string name="text_edit_delete_picture1">"照片删除后不可恢复"</string>
    <string name="text_edit_del_normal">"录像删除后不可恢复"</string>
    <string name="text_edit_del_emergency">"录像删除后不可恢复"</string>
    <string name="text_edit_mov_normal">"普通录像列表不再保存,"</string>
    <string name="text_edit_mov_emergency">"紧急录像列表不再保存,"</string>
    <string name="text_edit_move_to_emergency">"移至紧急录像"</string>
    <string name="text_edit_move_to_normal">"移出紧急录像"</string>
    <string name="text_edit_no_video_file">"无视频文件"</string>
    <string name="text_edit_no_picture_file">"无图片文件"</string>
    <string name="text_edit_delete_file">"删除选中文件"</string>
    <string name="text_edit_delete_file_content">"文件删除后不可恢复"</string>



    <string name="text_edit_move_to_emergency_tab">"移至紧急"</string>
    <string name="text_edit_move_to_normal_tab">"移出紧急"</string>

    <string name="text_edit_upload_title">上传选中文件</string>
    <string name="text_edit_upload_body">将文件上传到云端，\n此过程可能会消耗较多流量</string>
    <string name="text_edit_upload_confirm">上传</string>

    <!--    Setting-->
    <string name="text_setting_back">"返&#12288;&#12288;回"</string>
    <string name="text_setting_title_setting">"设置"</string>
    <string name="text_setting_resolution">"分辨率"</string>
    <string name="text_setting_time">"录制时长"</string>
    <string name="text_setting_driving_monitor_sensitivity">"行车监控灵敏度"</string>
    <string name="text_setting_parking_monitor_sensitivity">"停车监控灵敏度"</string>
    <string name="text_setting_sdcard_memory">"SD卡内存"</string>
    <string name="text_setting_sdcard_memory_ordinary_video">"普通录像"</string>
    <string name="text_setting_sdcard_memory_emergency_video">"紧急录像"</string>
    <string name="text_setting_sdcard_memory_photo">"照片"</string>
    <string name="text_setting_sdcard_memory_at_will_photo">"随心拍"</string>
    <string name="text_setting_sdcard_format">"格式化"</string>
    <string name="text_setting_sdcard_system_version">"系统版本"</string>
    <string name="text_setting_sdcard_restore_settings">"恢复出厂设置"</string>
    <string name="text_setting_parking_monitor">"停车监控"</string>
    <string name="text_setting_sdcard_format_success">"格式化成功"</string>
    <string name="text_setting_sdcard_info">"SD卡容量查询"</string>
    <string name="text_setting_sdcard_emergency_video">"紧急录像"</string>
    <string name="text_setting_sdcard_normal_video">"普通录像"</string>
    <string name="text_setting_sdcard_photo">"相册"</string>
    <string name="text_setting_dvr_version">"DVR版本"</string>
    <string name="text_setting_factory_setting">"恢复出厂设置"</string>
    <string name="text_setting_factory_setting_success">"恢复出厂设置成功"</string>
    <string name="text_setting_factory_setting_fail">"恢复出厂设置失败，请重试"</string>
    <string name="text_setting_sdcard_format_title">格式化SD卡</string>
    <string name="text_setting_sdcard_format_tips">"此操作将清除SD卡内的所有数据"</string>
    <string name="text_setting_sdcard_format_ok">"格式化"</string>
    <string name="text_setting_factory_reset_tips">"此操作将还原所有自定义设置和数据"</string>
    <string name="text_setting_factory_reset_tips1">"设置和数据"</string>
    <string name="text_setting_factory_reset_ok">"恢复"</string>
    <string name="text_setting_factory_formatting">"正在格式化,请稍后..."</string>
    <string name="text_setting_factory_formatting_success">"格式化成功"</string>
    <string name="text_setting_factory_formatting_fail">"格式化失败，请重试"</string>
    <string name="text_setting_factory_restoring">"正在恢复出厂设置,请稍后..."</string>
    <string name="text_setting_resolution_change">"请等待2秒,分辨率切换中..."</string>
    <string name="text_setting_dvr_widget_text">"行车记录仪"</string>
    <string name="text_setting_dvr_recording_time_one">"1分钟"</string>
    <string name="text_setting_dvr_recording_time_three">"3分钟"</string>
    <string name="text_setting_dvr_recording_time_five">"5分钟"</string>
    <string name="text_setting_dvr_resolution_1080">"1920*1080"</string>
    <string name="text_setting_dvr_resolution_720">"1280*720"</string>
    <string name="text_setting_dvr_sensitivity_high">"高"</string>
    <string name="text_setting_dvr_sensitivity_middle">"中"</string>
    <string name="text_setting_dvr_sensitivity_low">"低"</string>


    <!--    Dialog-->
    <string name="text_custom_dialog_ok">"确认"</string>
    <string name="text_custom_dialog_cancel">"取消"</string>
    <string name="text_custom_dialog_sdcard_format_success">"格式化成功"</string>

    <string name="text_open">开 启</string>
    <string name="text_pause">暂&#12288;&#12288;停</string>


    <string-array name="text_setting_dvr_resolution_arr">
        <item>"1920*1080"</item>
        <item>"1280*720"</item>
    </string-array>

    <string-array name="text_setting_dvr_recording_time_arr">
        <item>"1分钟"</item>
        <item>"3分钟"</item>
        <item>"5分钟"</item>
    </string-array>

    <string-array name="text_setting_dvr_drive_sensitivity_arr">
        <item>"低"</item>
        <item>"中"</item>
        <item>"高"</item>
    </string-array>

    <string-array name="text_setting_dvr_park_sensitivity_arr">
        <item>"低"</item>
        <item>"中"</item>
        <item>"高"</item>
    </string-array>

</resources>