<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dp1920"
    android:layout_height="@dimen/dp860"
    android:id="@+id/cl_notice"
    android:background="@color/black"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
        android:layout_width="@dimen/dp270"
        android:layout_height="wrap_content"
        android:src="@mipmap/line"
        android:layout_marginTop="1px"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/ll_replay_notice_back"
        android:layout_width="@dimen/dp270"
        android:layout_height="@dimen/dp123"
        android:clickable="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="24px"
            android:src="@mipmap/icon_return_n" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="16px"
            android:text="@string/text_replay_back"
            android:textColor="@color/white"
            android:textSize="35px" />

    </LinearLayout>

    <ImageView
        android:layout_width="@dimen/dp270"
        android:layout_height="wrap_content"
        android:src="@mipmap/line"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_replay_notice_back" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="@dimen/dp1650"
        android:layout_height="@dimen/dp860"
        android:layout_marginLeft="@dimen/dp270"
        android:background="@color/error_color"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/iv_prompt_warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/icon_prompt_warning"
            android:layout_marginTop="266px"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
        <TextView
            android:id="@+id/tv_notice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_drive_tip"
            android:textSize="40px"
            android:textColor="@color/white"
            android:layout_marginTop="14px"
            app:layout_constraintTop_toBottomOf="@id/iv_prompt_warning"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_warning_line2"
            android:textSize="30px"
            android:textColor="@color/white"
            android:layout_marginTop="51px"
            app:layout_constraintTop_toBottomOf="@id/tv_notice"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>